<?xml version="1.0" encoding="utf-8"?>
<!-- Written by Mudlej. License is GPLv3. -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_in_search_activity"
        android:orderInCategory="1"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:visible="false" />

    <item
        android:id="@+id/sort_by_creation_date"
        android:orderInCategory="2"
        android:title="@string/sort_by_creation_date"
        android:checkable="true"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_list"
        android:orderInCategory="3"
        android:title="@string/export"
        android:visible="false"
        app:showAsAction="never" />
</menu>
